@startuml

package de.jfachwert {

    interface SimpleValidator {
        T validate(T value)
    }

}

package de.jfachwert.pruefung {

    class AccessValidator
    class LengthValidator
    class NullValidator
    class NumberValidator

}

package de.jfachwert.net {
    set namespaceSeparator none
    class EMailAdresse.Validator
    class Telefonnummer.Validator
}

SimpleValidator -up-|> Serializable
SimpleValidator <|-- AccessValidator
SimpleValidator <|-- LengthValidator
SimpleValidator <|-- NullValidator
SimpleValidator <|-- NumberValidator
SimpleValidator <|-- EMailAdresse.Validator
SimpleValidator <|-- Telefonnummer.Validator

@enduml
